#1 - fixed the cucumber features adding tag wip to the definitions; added some explanation text to the readme about functionality and credits for DNS service to freedns in the home page

--- a/app/views/layouts/application.erb
+++ b/app/views/layouts/application.erb
@@ -62,7 +62,7 @@
 
 <footer id="footer">
   <div class="container">
-  Basado en <a href="http://twitter.github.com/bootstrap/">Bootstrap</a>. Alojado en <a href="http://pages.github.com/">GitHub</a>. Iconos de <a href="http://fortawesome.github.com/Font-Awesome/">Font Awesome</a>. Web fonts de <a href="http://www.google.com/webfonts">Google</a>.</p>
+  Basado en <a href="http://twitter.github.com/bootstrap/">Bootstrap</a>. Alojado en <a href="http://pages.github.com/">GitHub</a>. Servicio de DNS provisto por <a href="http://freedns.afraid.org/">FreeDNS</a>. Iconos de <a href="http://fortawesome.github.com/Font-Awesome/">Font Awesome</a>. Web fonts de <a href="http://www.google.com/webfonts">Google</a>.</p>
   </div>
 </footer>
 
