--- a/app/views/layouts/application.erb
+++ b/app/views/layouts/application.erb
@@ -41,7 +41,7 @@
 
           <li><a rel="tooltip" href="/" title="Inicio">Inicio</a></li>
           <% if current_account %>
-            <li><a rel="tooltip" href="/" title="Profile"><%= current_account.uid %></a></li>
+            <li><a rel="tooltip" href="/" title="Profile"><%= current_account.friendly_name %></a></li>
           <% else %>
             <li><a rel="tooltip" href="/login" title="Login">Login</a></li>
           <% end %>
