#16 - Controller and views added

--- a/app/views/layouts/application.erb
+++ b/app/views/layouts/application.erb
@@ -43,7 +43,7 @@
           <% if current_account %>
           <li><a rel="tooltip" href="/" title="Profile"><%= current_account.friendly_name %></a></li>
           <% else %>
-          <li><a href= "/appoitment/new" title="Login">Login</a></li>
+          <li><a href= "/appointments/new" title="Login">Login</a></li>
           <% end %>
         </ul>
       </div>
