--- a/app/views/layouts/application.erb
+++ b/app/views/layouts/application.erb
@@ -40,6 +40,7 @@
         <ul class="nav pull-right" id="main-menu-right">
 
           <li><a rel="tooltip" href="/" title="Inicio">Inicio</a></li>
+          <li><a rel="tooltip" href="/appointments/new" title="NewAppointment">Nuevo turno</a></li>
           <% if current_account %>
           <li><a rel="tooltip" href="/" title="Profile"><%= current_account.friendly_name %></a></li>
           <% else %>
