--- a/app/views/home/login.erb
+++ b/app/views/home/login.erb
@@ -5,6 +5,6 @@
 <input type='text' id='name' name='name'/>
 <label for='email'>Email:</label>
 <input type='text' id='email' name='email'/>
-<button type='submit' id="submit">Sign In</button>
+<button type='submit' class="btn big" id="submit">Sign In</button>
 
 </form>
