--- a/app/views/appointments/new.erb
+++ b/app/views/appointments/new.erb
@@ -3,11 +3,11 @@
     <%= csrf_token_field %>
     <h1>Nuevo turno:</h1>
     <label for='medic'>Nombre del médico:</label>
-    <input type="text" id="appointment[medic]" name="medic" class="large"/>
+    <input type="text" id="appointment[medic]" name="medic" placeholder="Nombre Apellido"class="large"/>
     <label for='date'>Fecha:</label>
-    <input type="text" id="appointment[date]" name="date"/>
+    <input type="text" id="appointment[date]" name="date" placeholder="AAAA-MM-DD"/>
     <label for='hour'>Horario:</label>
-    <input type="text" id="appointment[hour]" name="hour"/>
+    <input type="text" id="appointment[hour]" name="hour" placeholder="HH:MM"/>
     <label for='duration'>Tiempo de consulta:</label>
     <input type="text" id="appointment[duration]" name="duration" value="15"/>
     </br>
