#32 - Views, Controller and helper updated

--- a/app/views/appointments/new.erb
+++ b/app/views/appointments/new.erb
@@ -8,6 +8,8 @@
     <input type="text" id="appointment[date]" name="date" placeholder="AAAA-MM-DD"/>
     <label for='hour'>Horario:</label>
     <input type="text" id="appointment[hour]" name="hour" placeholder="HH:MM"/>
+    <label for='patient_email'>Email del paciente:</label>
+    <input type="text" id="appointment[patient_email]" name="patient_email" placeholder="ejemplo@servidorejemplo.com"/>
     <label for='duration'>Tiempo de consulta:</label>
     <input type="text" id="appointment[duration]" name="duration" value="15"/>
     </br>
