#34 - #35 View appointment list added and Controller updated

--- a/app/views/layouts/application.erb
+++ b/app/views/layouts/application.erb
@@ -41,6 +41,7 @@
 
           <li><a rel="tooltip" href="/" title="Inicio">Inicio</a></li>
           <li><a rel="tooltip" href="/appointments/new" title="NewAppointment">Nuevo turno</a></li>
+          <li><a rel="tooltip" href="/appointments/list" title="AppointmentsList">Lista de turnos</a></li>
           <% if current_account %>
           <li><a rel="tooltip" href="/" title="Profile"><%= current_account.friendly_name %></a></li>
           <% else %>
