--- a/app/views/appointments/new.erb
+++ b/app/views/appointments/new.erb
@@ -3,19 +3,19 @@
     <%= csrf_token_field %>
     <h1>Nuevo turno:</h1>
       <label for='medic'>Nombre del médico:</label>
-    <input type="text" id="appointment[medic]" name="medic" placeholder="Nombre Apellido" class="large"/>
+    <input type="text" id="appointment[medic]" name="medic" placeholder="Nombre Apellido" class="large" required/>
       <label for='date'>Fecha:</label>
-    <input type="date" id="appointment[date]" name="date" placeholder="AAAA-MM-DD"/>
+    <input type="date" id="appointment[date]" name="date" placeholder="AAAA-MM-DD" required/>
        <label for='hour'>Horario:</label>
-    <input type="time" id="appointment[hour]" name="hour" placeholder="HH:MM" class="tiny"/>
+    <input type="time" id="appointment[hour]" name="hour" placeholder="HH:MM" class="tiny" required/>
        <label for='patient_email'>Email del paciente:</label>
-    <input type="email" id="appointment[patient_email]" name="patient_email" placeholder="ejemplo@servidorejemplo.com"/>
+    <input type="email" id="appointment[patient_email]" name="patient_email" placeholder="ejemplo@servidorejemplo.com" required/>
       <label for='duration'>Tiempo de consulta:</label>
-    <input type="text" id="appointment[duration]" name="duration" value="15"/>
-    
+    <input type="number" id="appointment[duration]" name="duration" value="15" required/>
+
     </br>
     <input type="submit" class="btn big" id="saveButton" value="Guardar" />
-    
+
     </br></br>
     <% if flash[:error] %>
         <div class="alert alert-error">
