#- Updated index view.

--- a/app/views/home/index.erb
+++ b/app/views/home/index.erb
@@ -30,7 +30,7 @@
 
 <br>
 
-<div class="alert centered">
-Gracias por tu visita. René está aún en construcción, <a href="mailto:admin@reneturnos.com.ar">escríbenos</a> y te contactaremos en cuanto esté René listo.
+<div class="alert alert-success">
+Gracias por tu visita. René está aún en construcción, <a class="mail" href="mailto:admin@reneturnos.com.ar">escríbenos</a> y te contactaremos en cuanto esté René listo.
 </div>
 
