--- a/app/views/appointments/list.erb
+++ b/app/views/appointments/list.erb
@@ -16,7 +16,7 @@
             <td><%= appointment.medic %></td>
             <td><%= appointment.date_and_hour.to_s[0..9] %></td>
             <td><%= appointment.date_and_hour.to_s[11..15] %></td>
-            <td><%= appointment.patient_email %></td>
+            <td><%= appointment.patient_name %></td>
          </tr>
          <% end %>
       </tbody>
