--- a/app/views/appointments/new.erb
+++ b/app/views/appointments/new.erb
@@ -9,7 +9,7 @@
        <label for='hour'>Horario:</label>
     <input type="time" id="appointment[hour]" name="hour" placeholder="HH:MM" class="tiny" required/>
        <label for='patient_email'>Email del paciente:</label>
-    <input type="email" id="appointment[patient_email]" name="patient_email" placeholder="ejemplo@servidorejemplo.com" required/>
+    <input type="text" id="appointment[patient_name]" name="patient_name" placeholder="twitter username" required/>
       <label for='duration'>Tiempo de consulta:</label>
     <input type="number" id="appointment[duration]" name="duration" value="15" required/>
 
