--- a/app/views/appointments/show.erb
+++ b/app/views/appointments/show.erb
@@ -4,7 +4,7 @@
     <p>Dr.: <%= @appointment.medic %></p>
     <p>Fecha: <%= @appointment.date_and_hour.to_s[0..9] %></p>
     <p>Hora: <%= @appointment.date_and_hour.to_s[11..15] %></p>
-    <p>Email del paciente: <%= @appointment.patient_email %></p>
+    <p>Nombre del paciente: <%= @appointment.patient_name %></p>
     <input type="submit" class="btn big" id="returnNew" value="Nuevo Turno" />
   </form>
 </div>
