--- a/app/views/home/login.erb
+++ b/app/views/home/login.erb
@@ -3,8 +3,8 @@
 
 <label for='name'>Name:</label>
 <input type='text' id='name' name='name'/>
-<label for='email'>Email:</label>
+<label for='email'>Usuario twitter:</label>
 <input type='text' id='email' name='email'/>
-<button type='submit' class="btn big" id="submit">Sign In</button>
+<button type='submit' class="btn big" id="submit">Ingresar</button>
 
 </form>
