--- a/app/views/layouts/application.erb
+++ b/app/views/layouts/application.erb
@@ -41,8 +41,16 @@
 
           <li><a rel="tooltip" href="/" title="Inicio">Inicio</a></li>
           <% if current_account %>
-          <li><a rel="tooltip" href="/appointments/new" title="NewAppointment">Nuevo turno</a></li>
-          <li><a rel="tooltip" href="/appointments/list" title="AppointmentsList">Lista de turnos</a></li>
+          <li><a rel="tooltip" href="/appointments/new">Nuevo turno</a></li>
+          <li class="dropdown">
+            <a class="dropdown-toggle" href="#" data-toggle="dropdown">Lista de turnos
+               <b class="caret"></b>
+            </a>
+               <ul class="dropdown-menu">
+                  <li><a href="/appointments/medical_office_list">Consultorio</a></li>
+                  <li><a href="/appointments/patient_list">Paciente</a></li>
+               </ul>
+          </li>
           <li class="dropdown">
             <a class="dropdown-toggle" href="#" data-toggle="dropdown"><%= current_account.friendly_name %>
                <b class="caret"></b>
@@ -52,7 +60,7 @@
                </ul>
           </li>
           <% else %>
-          <li><a href= "/appointments/new" title="Login">Login</a></li>
+          <li><a href= "/appointments/new">Iniciar sesión</a></li>
           <% end %>
         </ul>
       </div>
