--- a/app/views/appointments/list.erb
+++ b/app/views/appointments/list.erb
@@ -1,25 +1,40 @@
-<% if @appointments.empty? %>
-      <legend><%= @message %></legend>
-<% else %>
-   <table class="table table-bordered table-striped table-hover">
-     <thead>
-       <tr>
-           <th>Doctor/a</th>
-           <th>Fecha</th>
-           <th>Hora</th>
-           <th>Paciente</th>
-       </tr>
-      </thead>
-      <tbody>
-         <% @appointments.each do |appointment| %>
-         <tr>
-            <td><%= appointment.medic %></td>
-            <td><%= appointment.date_and_hour.to_s[0..9] %></td>
-            <td><%= appointment.date_and_hour.to_s[11..15] %></td>
-            <td><%= appointment.patient_name %></td>
-         </tr>
-         <% end %>
-      </tbody>
-  </table>
-<% end %>
+<h3>Mis turnos como <%= @rol %>:</h3> 
+
+   <% if @appointments.empty? %>
+         <legend><%= @message %></legend>
+   <% else %>
+      <table class="table table-bordered table-striped table-hover">
+        <thead>
+          <tr>
+              <th>Doctor/a</th>
+              <th>Fecha</th>
+              <th>Hora</th>
+              <%if @rol == "Consultorio" %>
+                 <th>Paciente</th>
+                 <input type="hidden" name="redirect_page" value="appointments/medical_office_list">
+              <% else %>
+                 <th>Consultorio</th>
+                 <input type="hidden" name="redirect_page" value="appointments/patient_list">
+              <% end %>
+          </tr>
+         </thead>
+         <tbody>
+            <% @appointments.each do |appointment| %>
+            <tr>
+               <td><%= appointment.medic %></td>
+               <td><%= appointment.date_and_hour.to_s[0..9] %></td>
+               <td><%= appointment.date_and_hour.to_s[11..15] %></td>
+               <td>
+                  <%if @rol == "Consultorio" %>
+                     <%= appointment.patient_name %>
+                  <% else %>
+                     <%= appointment.user_friendly_name %>
+                  <% end %>
+                </td>          
+            </tr>
+            <% end %>
+         </tbody>
+     </table>
+
+   <% end %>
 
