#47 - Change login: email by twitter username

--- a/app/views/appointments/new.erb
+++ b/app/views/appointments/new.erb
@@ -8,8 +8,8 @@
     <input type="date" id="appointment[date]" name="date" placeholder="AAAA-MM-DD" required/>
        <label for='hour'>Horario:</label>
     <input type="time" id="appointment[hour]" name="hour" placeholder="HH:MM" class="tiny" required/>
-       <label for='patient_email'>Email del paciente:</label>
-    <input type="text" id="appointment[patient_name]" name="patient_name" placeholder="twitter username" required/>
+       <label for='patient_email'>Nombre de usuario del paciente:</label>
+    <input type="text" id="appointment[patient_name]" name="patient_name" placeholder="Usuario twitter" required/>
       <label for='duration'>Tiempo de consulta:</label>
     <input type="number" id="appointment[duration]" name="duration" value="15" required/>
 
