--- a/app/views/appointments/list.erb
+++ b/app/views/appointments/list.erb
@@ -1,4 +1,7 @@
-<h3>Mis turnos como <%= @rol %>:</h3> 
+<h3>Mis turnos como <%= @rol %>:</h3>
+
+<form method="get" action='/appointments/delete'>
+   <%= csrf_token_field %>  
 
    <% if @appointments.empty? %>
          <legend><%= @message %></legend>
@@ -6,6 +9,7 @@
       <table class="table table-bordered table-striped table-hover">
         <thead>
           <tr>
+              <th width="15"></th> 
               <th>Doctor/a</th>
               <th>Fecha</th>
               <th>Hora</th>
@@ -21,6 +25,7 @@
          <tbody>
             <% @appointments.each do |appointment| %>
             <tr>
+               <td><input type="checkbox" name="appointments_id" value="<%= appointment.id %>"></td>
                <td><%= appointment.medic %></td>
                <td><%= appointment.date_and_hour.to_s[0..9] %></td>
                <td><%= appointment.date_and_hour.to_s[11..15] %></td>
@@ -36,5 +41,14 @@
          </tbody>
      </table>
 
-   <% end %>
+     <input type="submit" class="btn btn-primary btn-large" id="cancelTurnButton" value="Cancelar Turno"/> 
 
+    </br></br>
+    <% if flash[:error] %>
+        <div class="alert alert-error">
+          <%=flash[:error] %>
+        </div>
+    <% end %>
+
+   <% end %>
+</form>
