--- a/app/views/layouts/application.erb
+++ b/app/views/layouts/application.erb
@@ -41,14 +41,21 @@
 
           <li><a rel="tooltip" href="/" title="Inicio">Inicio</a></li>
           <% if current_account %>
-          <li><a rel="tooltip" href="/appointments/new">Nuevo turno</a></li>
           <li class="dropdown">
-            <a class="dropdown-toggle" href="#" data-toggle="dropdown">Lista de turnos
+            <a class="dropdown-toggle" href="#" data-toggle="dropdown">Paciente
                <b class="caret"></b>
             </a>
                <ul class="dropdown-menu">
-                  <li><a href="/appointments/medical_office_list">Consultorio</a></li>
-                  <li><a href="/appointments/patient_list">Paciente</a></li>
+                  <li><a href="/appointments/patient_list">Lista de turnos</a></li>
+               </ul>
+          </li>
+          <li class="dropdown">
+            <a class="dropdown-toggle" href="#" data-toggle="dropdown">Consultorio
+               <b class="caret"></b>
+            </a>
+               <ul class="dropdown-menu">
+                  <li><a href="/appointments/new">Nuevo turno</a></li>
+                  <li><a href="/appointments/medical_office_list">Lista de turnos</a></li>
                </ul>
           </li>
           <li class="dropdown">
