--- a/app/views/layouts/application.erb
+++ b/app/views/layouts/application.erb
@@ -56,6 +56,7 @@
                <ul class="dropdown-menu">
                   <li><a href="/appointments/new">Nuevo turno</a></li>
                   <li><a href="/appointments/medical_office_list">Lista de turnos</a></li>
+									<li><a href="/appointments/new_pending_appointment">Nuevo Turno Pendiente</a></li>
                </ul>
           </li>
           <li class="dropdown">
