--- a/app/views/appointments/list.erb
+++ b/app/views/appointments/list.erb
@@ -1,6 +1,12 @@
 <h3>Mis turnos como <%= @rol %>:</h3>
 
-<form method="post" action='/appointments/delete'>
+<form method="post" 
+		<% if @rol == "Paciente Reserva" %>	
+			action='/appointments/book_appointment'> 
+		<% else %>	
+			action='/appointments/delete'>
+		<% end %>
+
    <%= csrf_token_field %>
 
    <% if @appointments.empty? %>
@@ -46,7 +52,12 @@
           <%=flash[:error] %>
         </div>
      <% end %>
-
-     <input type="submit" class="btn btn-primary btn-large" id="cancelTurnButton" value="Cancelar Turno"/> 
+		
+     <input type="submit" class="btn btn-primary btn-large" 
+			<% if @rol == "Paciente Reserva" %>	
+				id="bookAppointmentButton" value="Reservar Turno"/> 
+			<% else %>	
+				id="cancelTurnButton" value="Cancelar Turno"/> 
+			<% end %>
    <% end %>
 </form>
