--- a/app/views/layouts/application.erb
+++ b/app/views/layouts/application.erb
@@ -46,7 +46,8 @@
                <b class="caret"></b>
             </a>
                <ul class="dropdown-menu">
-                  <li><a href="/appointments/patient_list">Lista de turnos</a></li>
+                  <li><a href="/appointments/patient_list">Lista de turnos obtenidos</a></li>
+									<li><a href="/appointments/select_office">Lista de turnos disponibles</a></li>
                </ul>
           </li>
           <li class="dropdown">
