--- a/app/views/appointments/show_book_appointment_message.erb
+++ b/app/views/appointments/show_book_appointment_message.erb
@@ -3,10 +3,7 @@
     <h1>Su reserva se ha realizado con éxito</h1>
 		</div>
 	<div class="well">
-		<div>
-    Puede ver sus turnos
-		</div>
-	<a href="/appointments/patient_list"><button class = "btn btn-primary" id="GoToPatientList">Ver mis turnos reservados</a> 
+	<a href="/appointments/patient_list"><button class = "btn btn-primary" id="GoToPatientList">Ver mis turnos reservados<button></a> 
 	</div>
 	
 </div>
