--- a/app/views/layouts/application.erb
+++ b/app/views/layouts/application.erb
@@ -46,8 +46,8 @@
                <b class="caret"></b>
             </a>
                <ul class="dropdown-menu">
-                  <li><a href="/appointments/patient_list">Lista de turnos obtenidos</a></li>
-									<li><a href="/appointments/select_office">Lista de turnos disponibles</a></li>
+                  <li><a href="/appointments/select_office">Reservar Turno</a></li>
+                  <li><a href="/appointments/patient_list">Lista de turnos</a></li>			
                </ul>
           </li>
           <li class="dropdown">
@@ -56,8 +56,9 @@
             </a>
                <ul class="dropdown-menu">
                   <li><a href="/appointments/new">Nuevo turno</a></li>
+                  <li><a href="/appointments/new_pending_appointment">Agregar Turno Disponible</a></li>
                   <li><a href="/appointments/medical_office_list">Lista de turnos</a></li>
-									<li><a href="/appointments/new_pending_appointment">Nuevo Turno Pendiente</a></li>
+						
                </ul>
           </li>
           <li class="dropdown">
