--- a/app/views/appointments/show_book_appointment_message.erb
+++ b/app/views/appointments/show_book_appointment_message.erb
@@ -1,9 +1,4 @@
 <div class="well">
-		<div class="well">
-    <h1>Su reserva se ha realizado con éxito</h1>
-		</div>
-	<div class="well">
-	<a href="/appointments/patient_list"><button class = "btn btn-primary" id="GoToPatientList">Ver mis turnos reservados<button></a> 
-	</div>
-	
+   <legend>Su reserva se ha realizado con éxito.</legend>
+	<a href="/appointments/patient_list" class = "btn btn-primary" id="GoToPatientList">Ver mis turnos reservados</a> 
 </div>
