--- a/app/views/appointments/show.erb
+++ b/app/views/appointments/show.erb
@@ -5,7 +5,7 @@
     <p>Fecha: <%= @appointment.date_and_hour.to_s[0..9] %></p>
     <p>Hora: <%= @appointment.date_and_hour.to_s[11..15] %></p>
 
-		<% if @rol == "Turno Asignado" %>	
+		<% if @state == "Asignado" %>	
 			<p>Nombre del paciente: <%= @appointment.patient_name %></p>
 			<a href="/appointments/new" class = "btn btn-primary" id="returnNew">Nuevo Turno</a> 
 		<% else %>	
